--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1717,6 +1717,182 @@ section {
 
 
 /*--------------------------------------------------------------
+# promotion
+--------------------------------------------------------------*/
+
+.promotion .info {
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+.promotion .info i {
+    font-size: 20px;
+    color: #7cc576;
+    width: 44px;
+    height: 44px;
+    background: #eaf6e9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+    transition: all 0.3s ease-in-out;
+}
+
+.promotion .info h4 {
+    padding: 0 0 0 60px;
+    font-size: 22px;
+    font-weight: 600;
+    margin-bottom: 5px;
+    color: #151515;
+}
+
+.promotion .info p {
+    padding: 0 0 0 60px;
+    margin-bottom: 0;
+    font-size: 14px;
+    color: #484848;
+}
+
+.promotion .info .email,
+.promotion .info .phone {
+    margin-top: 40px;
+}
+
+.promotion .info .email:hover i,
+.promotion .info .address:hover i,
+.promotion .info .phone:hover i {
+    background: #7cc576;
+    color: #fff;
+}
+
+.promotion .promociones-form {
+    width: 100%;
+    background: #fff;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+.promotion .promociones-form .form-group {
+    padding-bottom: 8px;
+}
+
+.promotion .promociones-form .validate {
+    display: none;
+    color: red;
+    margin: 0 0 15px 0;
+    font-weight: 400;
+    font-size: 13px;
+}
+
+.promotion .promociones-form .error-message {
+    display: none;
+    color: #fff;
+    background: #ed3c0d;
+    text-align: center;
+    padding: 15px;
+    font-weight: 600;
+}
+
+.promotion .promociones-form .okey-message {
+    display: none;
+    color: #fff;
+    background: #61b959;
+    text-align: center;
+    padding: 15px;
+    font-weight: 600;
+}
+
+.promotion .promociones-form .sent-message {
+    display: none;
+    color: #fff;
+    background: #18d26e;
+    text-align: center;
+    padding: 15px;
+    font-weight: 600;
+}
+
+.promotion .promociones-form .loading {
+    display: none;
+    background: #fff;
+    text-align: center;
+    padding: 15px;
+}
+
+.promotion .promociones-form .loading:before {
+    content: "";
+    display: inline-block;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    margin: 0 10px -6px 0;
+    border: 3px solid #18d26e;
+    border-top-color: #eee;
+    -webkit-animation: animate-loading 1s linear infinite;
+    animation: animate-loading 1s linear infinite;
+}
+
+.promotion .promociones-form input,
+.promotion .promociones-form textarea {
+    border-radius: 0;
+    box-shadow: none;
+    font-size: 14px;
+}
+
+.promotion .promociones-form input {
+    height: 44px;
+}
+
+.promotion .promociones-form textarea {
+    padding: 10px 12px;
+}
+
+.promotion .promociones-form button[type="submit"] {
+    background: #7cc576;
+    border: 0;
+    padding: 10px 24px;
+    color: #fff;
+    transition: 0.4s;
+    border-radius: 4px;
+}
+
+.promotion .promociones-form button[type="submit"]:hover {
+    background: #61b959;
+}
+
+.col-center {
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@-webkit-keyframes animate-loading {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes animate-loading {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+
+/*--------------------------------------------------------------
+# promotion
+--------------------------------------------------------------*/
+
+
+/*--------------------------------------------------------------
 # social
 --------------------------------------------------------------*/
 
