--- a/assets/css/animation.css
+++ b/assets/css/animation.css
@@ -38,3 +38,10 @@
     height: 50px;
     border-radius: 50%;
 }
+
+.juego {
+    vertical-align: middle;
+    width: 100px;
+    height: 100px;
+    /* border-radius: 50%; */
+}
