--- a/assets/css/animation.css
+++ b/assets/css/animation.css
@@ -45,3 +45,55 @@
     height: 100px;
     /* border-radius: 50%; */
 }
+
+
+/*primero en el móvil (mobile first)*/
+
+.menuleft .menuleft nav {
+    padding: 1em;
+    font-family: Verdana, Geneva, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.menuleft {
+    /* justify-content: flex-end;
+    display: flex;
+    float: left; */
+    margin-top: 7%;
+    height: 100%;
+    /* 100% Full-height */
+    width: 0;
+    /* 0 width - change this with JavaScript */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Stay on top */
+    top: 0;
+    /* Stay at the top */
+    left: 0;
+    padding-top: 60px;
+    /* Place content 60px from the top */
+    transition: 0.5s;
+    /* 0.5 second transition effect to slide in the sidenav */
+}
+
+.menuleft nav ul {
+    list-style: none;
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+    background: #ffffff;
+}
+
+.menuleft nav li a {
+    color: black;
+    display: block;
+    text-decoration: none;
+    padding: .5em 1em;
+}
+
+.menuleft nav li a:hover {
+    background: tomato;
+    color: white;
+}
