--- a/assets/css/animation.css
+++ b/assets/css/animation.css
@@ -60,6 +60,7 @@
     /* justify-content: flex-end;
     display: flex;
     float: left; */
+    margin-left: 10px;
     margin-top: 7%;
     height: 100%;
     /* 100% Full-height */
